--- a/index.html
+++ b/index.html
@@ -12,21 +12,24 @@
   </head>
   <body>
     <div class="container-principal">
-      <header>
-        <h1>Where Can I Buy IT?</h1>
-        <div class="header-info">
-          <span>
-            <a href=""
-              >Made by: @vinisetim<img src="IMG/github-logo.png" alt="" /></a
-          ></span>
+     <header>
+    <img src="IMG/game_finder_pc_logo.png" alt="Game Finder PC Logo" class="site-logo"> 
+    
+    <div class="header-info">
+      <span>
+        <a href="https://github.com/Vinisetim " target="_blank" rel="noopener noreferrer"
+          >Made by: @vinisetim<img src="IMG/github-logo.png" alt="" /></a
+      ></span>
+    </div>
+</header>
+
+     <section class="banner">
+        <span class="banner-title">JOGO EM DESTAQUE</span>
+        
+        <div class="featured-game-frame" id="silksong-banner-search"> 
+            <img src="IMG/banner.jpeg" alt="Hollow Knight: Silksong" />
         </div>
-      </header>
-
-      <section class="banner">
-        <span class="banner-title">MAIS PROCURADO DA SEMANA</span>
-        <img src="IMG/banner.jpeg" alt="" />
-      </section>
-
+    </section>
       <main class="conteudo-principal">
         <section class="game-finder-area">
           <h2>Where Can I Buy IT?</h2>
@@ -48,11 +51,11 @@
         </section>
 
         <aside class="barra-lateral-top-jogos">
-          <h2>TOP GAMES</h2>
+          <h2>HISTÓRICO</h2>
           <div class="conteudo-top-jogos">
             <div class="top-jogos">
-              <ul>
-                <li><a href="#">Pokémon</a></li>
+              <ul id="search-history-list">
+                <li style="color: #6b7280; font-style: italic;">Nenhum jogo pesquisado.</li>
               </ul>
             </div>
           </div>
